[package]
name = "tlsnotary_acme"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
rcgen = "0.12"
serde_json = "1.0.81"
axum = "0.7"
tokio-rustls-acme = { version = "0.4.0", features = ["axum"] }
serde = { version = "1.0.137", features = ["derive"] }
ring = { version = "0.17.0", features = ["std"] }
base64 = "0.21.0"
log = "0.4.17"
tlsn-verifier  = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
tlsn-tls-core  = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
webpki-roots = "0.26"
pem = "3.0"
thiserror = "1.0.31"
x509-parser = "0.16"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
url = "2.2.2"
async-trait = "0.1.53"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
time = "0.3.36" # force the transitive dependency to a more recent minimal version. The build fails with 0.3.20

tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }


simple_logger = "4.1"
structopt = "0.3.26"
clap = { version = "4", features = ["derive"] }

tokio = { version="1.19.2", features = ["full"] }
tokio-stream = { version="0.1.9", features = ["net"] }
tokio-util = { version="0.7.3", features = ["compat"] }
warp = "0.3.7"

axum-server = { version = "0.7", features = ["tokio-rustls"] }
